--- a/Audio and Video Files.html
+++ b/Audio and Video Files.html
@@ -52,7 +52,7 @@
 							</article>
 						</div>
 						<ul class="actions">
-							<li><a href="Main Page.html" class="button">Back to Main Page</a></li>
+							<li><a href="index.html" class="button">Back to Main Page</a></li>
 						</ul>
 					</section>
 
