--- a/Featured Wildlife Information.html
+++ b/Featured Wildlife Information.html
@@ -71,7 +71,7 @@
 
 						</div>
 						<ul class="actions">
-							<li><a href="Main Page.html" class="button">Back to Main Page</a></li>
+							<li><a href="index.html" class="button">Back to Main Page</a></li>
 						</ul>
 					</section>
 
