--- a/Further Learning.html
+++ b/Further Learning.html
@@ -70,7 +70,7 @@
 
 						</div>
 						<ul class="actions">
-							<li><a href="Main Page.html" class="button">Back to Main Page</a></li>
+							<li><a href="index.html" class="button">Back to Main Page</a></li>
 						</ul>
 					</section>
 
